# vectoradd-advisor-refresh

./: .gitignore  README.md  plot_comparison.py  pyproject.toml  run_agent.sh
vectoradd/: advisor_prompt.md  agent.py  results.json  run_eval.py  submission.py  tools.py  worker_prompt.md
vectoradd/runs/20260610_223641_vectoradd_starting_point/20260610_223641/: experiment_history.md  proposals.md  results.tsv  snapshot_iter10.py  snapshot_iter11.py  snapshot_iter12.py  snapshot_iter13.py  snapshot_iter14.py  snapshot_iter15.py  snapshot_iter2.py  snapshot_iter3.py  snapshot_iter4.py  snapshot_iter5.py  snapshot_iter6.py  snapshot_iter8.py  snapshot_iter9.py
vectoradd/runs/20260610_223641_vectoradd_starting_point/20260610_224854/: experiment_history.md  proposals.md  results.tsv  snapshot_iter10.py  snapshot_iter2.py  snapshot_iter3.py  snapshot_iter4.py  snapshot_iter5.py  snapshot_iter6.py  snapshot_iter7.py  snapshot_iter8.py  snapshot_iter9.py
